# ArcaneSequencer

./: .gitignore  pyproject.toml
notebooks/: vec_trainer.ipynb
src/models/: vec.py
src/utils/: data.py
src/worksheets/: test_hifi_gan.ipynb  test_hifi_gan.py
