[project]
name = "ArcaneSequencer"
version = "0.1.0"
description = "VAE + RNN music generator using mel spectrograms and a neural vocoder."
authors = [
  { name = "Luis Quesada", email = "luiscarlosquesada@icloud.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  # Core numerics
  "numpy>=1.26",
  "scipy>=1.11",

  # Deep learning stack
  "torch>=2.3",
  "torchaudio>=2.3",

  # Audio + features
  "librosa>=0.10",
  "soundfile>=0.12",  # for reading/writing audio

  # Utils
  "tqdm>=4.66",       # progress bars
  "rich>=13.7",       # pretty logging / debugging
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ipykernel>=6.29",
]

# If you later package a specific HiFi-GAN wrapper from Git, you can add something like:
# vocoder = [
#   "your-hifigan-wrapper @ git+https://github.com/yourname/your-hifigan-wrapper.git",
# ]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv]
# You can pin a default Python here if you want uv to always use it:
python = "3.10"

# You can also set an index if you’re pulling PyTorch from a custom wheel index, e.g.:
# index-url = "https://download.pytorch.org/whl/cu121"
