[project]
name = "ArcaneSequencer"
version = "0.1.0"
description = "VAE + RNN music generator using mel spectrograms and a neural vocoder."
authors = [
  { name = "Luis Quesada", email = "luiscarlosquesada@icloud.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = "==3.13.*"

dependencies = [
  # Core numerics
  "numpy>=2.3.5",
  "scipy>=1.16.3",
  # Deep learning stack
  "torch>=2.9.1",
  "torchaudio>=2.9.1",
  # Audio + features
  "soundfile>=0.13.1",  # for reading/writing audio
  # Utils
  "tqdm>=4.67.1",       # progress bars
  "rich>=14.2.0",       # pretty logging / debugging
  "jupyter>=1.1.1",
  "bigvgan>=2.4.1",
  "librosa>=0.11.0",
  "wandb>=0.23.0",
  "torchcodec>=0.8.1",
  "huggingface-hub==0.36.0",
]

[project.optional-dependencies]
dev = [
  "black>=25.11.0",
  "ruff>=0.14.6",
  "mypy>=1.18.2",
  "pytest>=9.0.1",
  "pytest-cov>=7.0.0",
  "ipykernel>=7.1.0",
]


